--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -183,7 +183,7 @@ jobs:
           
       - name: img2sdat && brotli
         run: |
-          sudo -E apt-get install -y brotli
+          pip2.7 install brotli
           mv tmp/new-boot.img template/boot.img
           mv system.img template/system.img
           cd template
